<resources>

    <!-- Global -->
    <string name="app_name">Склад (ПрИС)</string>
    <string name="msg_list_empty">Список пуст</string>
    <string name="error_field_empty">Заполните поля</string>
    <string name="action_save">Сохранить</string>

    <!-- Activity's -->
    <string name="activity_units">Единицы измерения</string>
    <string name="activity_job_positions">Должности сотрудников</string>
    <string name="activity_type_organization_units">Типы подразделений</string>
    <string name="activity_organization_units">Подразделения</string>
    <string name="activity_employee">Сотрудники</string>
    <string name="activity_nomenclature">Номенклатура</string>
    <string name="activity_receiver_product">Приход товара</string>

    <!-- Navigation's -->
    <string name="nav_drawer_open">Отркыть меню</string>
    <string name="nav_drawer_close">Закрыть меню</string>
    <string name="nav_units">@string/activity_units</string>
    <string name="nav_job_positions">@string/activity_job_positions</string>
    <string name="nav_type_organization_units">@string/activity_type_organization_units</string>
    <string name="nav_organization_units">@string/activity_organization_units</string>
    <string name="nav_employee">@string/activity_employee</string>
    <string name="nav_nomenclature">@string/activity_nomenclature</string>
    <string name="nav_receiver_product">@string/activity_receiver_product</string>

    <!-- Units -->
    <string name="item_unit_list_format">%1$s (%2$s)</string>

    <!-- Employees -->
    <string name="item_employee_name_list_format">%1$s %2$s %3$s</string>
    <string name="item_employee_name_small_list_format">%1$s %2$s. %3$s.</string>

    <!-- Nomenclature -->
    <string name="item_nomenclature_unit_list_format">Единица измерения: %1$s (%2$s)</string>

    <!-- Detail Receiver Product -->
    <string name="hint_name_invoice_input">Наименование накладной</string>
    <string name="hint_movement_to">Получатель</string>
    <string name="hint_name_employee_input">Приемщик</string>
    <string name="hint_date">Дата</string>

    <!-- Product -->
    <string name="item_amount_product_list_format">Количество: %1$s (%2$s)</string>
    <string name="title_alert_product">Товар</string>
    <string name="hint_amount_product">Количество</string>
    <string name="action_alert_product_positive">Сохранить</string>
    <string name="action_alert_product_negative">Отмена</string>

</resources>
